--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,7 +23,17 @@ ark-serialize = "=0.2.0"
 ark-std = "=0.2.0"
 ark-bls12-381 = "=0.2.0"
 
+[dev-dependencies]
+criterion = "=0.3.4"
+
 [profile.test]
 opt-level = 3
 
+[[bench]]
+name = "benchmarks"
+harness = false
+
+[profile.bench]
+opt-level = 3
+debug = true
 
