--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,9 +10,9 @@ readme = "README.md"
 
 [dependencies]
 hex = "=0.4.3"
-rand_core = { version = "=0.5" }
+rand_core = "=0.5"
 rand = "=0.7.3"
-blake2b_simd = "0.5.11"
+blake2b_simd = "=0.5.11"
 miracl_core = "=2.3.0"
 chacha20 = "=0.6.0"
 
@@ -22,6 +22,12 @@ ark-poly = "=0.2.0"
 ark-serialize = "=0.2.0"
 ark-std = "=0.2.0"
 ark-bls12-381 = "=0.2.0"
+bls12_381 = "=0.3.1"
+sha2 = "=0.9.1"
+
+[dependencies.digest]
+version = "=0.9.0"
+features = ["alloc"]
 
 [profile.test]
 opt-level = 3
