--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,21 +10,22 @@ readme = "README.md"
 
 [dependencies]
 hex = "=0.4.3"
-rand_core = "=0.5"
-rand = "=0.7.3"
-rayon = "=1.5.0"
-thiserror = "=1.0.14"
+rand_core = "0.6"
+rand = "0.8"
+rayon = "=1.5.1"
+thiserror = "=1.0.26"
 anyhow = "=1.0"
 
 blake2b_simd = "=0.5.11"
 miracl_core = "=2.3.0"
-chacha20 = "=0.6.0"
-ark-ff = "=0.2.0"
-ark-ec = "=0.2.0"
-ark-poly = "=0.2.0"
-ark-serialize = "=0.2.0"
-ark-std = "=0.2.0"
-ark-bls12-381 = "=0.2.0"
+chacha20 = "0.7"
+ark-ff = "0.3"
+ark-ec = "0.3"
+ark-poly = "0.3"
+ark-serialize = "0.3"
+ark-std = "0.3"
+ark-bls12-381 = "0.3"
+itertools="0.10"
 
 [dev-dependencies]
 criterion = "=0.3.4"
